# BGC_Portal/BCG_WebApi_swagger.json
@@ -337,6 +337,53 @@
         }
       }
     },
+    "/api/GameSession/memberName": {
+      "get": {
+        "tags": [
+          "GameSession"
+        ],
+        "parameters": [
+          {
+            "name": "memberName",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GameSessionDTO"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GameSessionDTO"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GameSessionDTO"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/GameSessionRegistration": {
       "get": {
         "tags": [
@@ -1001,6 +1048,84 @@
         }
       }
     },
+    "/api/Member/{email}": {
+      "get": {
+        "tags": [
+          "Member"
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/MemberDTO"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MemberDTO"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MemberDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Member/{name}": {
+      "get": {
+        "tags": [
+          "Member"
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/MemberDTO"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MemberDTO"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MemberDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Member/CheckUserExists": {
       "post": {
         "tags": [
@@ -1027,7 +1152,24 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
           }
         }
       }
@@ -1533,7 +1675,7 @@
   },
   "components": {
     "schemas": {
-      "Game": {
+      "GameDTO": {
         "type": "object",
         "properties": {
           "gameId": {
@@ -1561,105 +1703,7 @@
           "versions": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/GameVersion"
-            },
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "GameDTO": {
-        "type": "object",
-        "properties": {
-          "gameId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "description": {
-            "type": "string",
-            "nullable": true
-          },
-          "minNumberPlayers": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "maxNumberPlayers": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "GameSession": {
-        "type": "object",
-        "properties": {
-          "gameSessionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "description": {
-            "type": "string",
-            "nullable": true
-          },
-          "schedule": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "minNumberPlayers": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "maxNumberPlayers": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "status": {
-            "$ref": "#/components/schemas/SessionStatus"
-          },
-          "length": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "organizerId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "organizer": {
-            "$ref": "#/components/schemas/Member"
-          },
-          "gameTableId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "gameTable": {
-            "$ref": "#/components/schemas/GameTable"
-          },
-          "gameSessionRegistrations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GameSessionRegistration"
-            },
-            "nullable": true
-          },
-          "gamesSessionGames": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GameSessionGame"
+              "$ref": "#/components/schemas/GameVersionDTO"
             },
             "nullable": true
           }
@@ -1709,7 +1753,7 @@
             "nullable": true
           },
           "organizer": {
-            "$ref": "#/components/schemas/Member"
+            "$ref": "#/components/schemas/MemberDTO"
           },
           "gameTableId": {
             "type": "integer",
@@ -1717,55 +1761,7 @@
             "nullable": true
           },
           "table": {
-            "$ref": "#/components/schemas/GameTable"
-          }
-        },
-        "additionalProperties": false
-      },
-      "GameSessionGame": {
-        "type": "object",
-        "properties": {
-          "gameSessionGameId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "gameSessionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "gameSession": {
-            "$ref": "#/components/schemas/GameSession"
-          },
-          "gameVersionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "gameVersion": {
-            "$ref": "#/components/schemas/GameVersion"
-          }
-        },
-        "additionalProperties": false
-      },
-      "GameSessionRegistration": {
-        "type": "object",
-        "properties": {
-          "gameSessionRegistrationId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "memberId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "player": {
-            "$ref": "#/components/schemas/Member"
-          },
-          "gameSessionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "gameSession": {
-            "$ref": "#/components/schemas/GameSession"
+            "$ref": "#/components/schemas/GameTableDTO"
           }
         },
         "additionalProperties": false
@@ -1782,42 +1778,14 @@
             "format": "int32"
           },
           "player": {
-            "$ref": "#/components/schemas/Member"
+            "$ref": "#/components/schemas/MemberDTO"
           },
           "gameSessionId": {
             "type": "integer",
             "format": "int32"
           },
           "gameSession": {
-            "$ref": "#/components/schemas/GameSession"
-          }
-        },
-        "additionalProperties": false
-      },
-      "GameTable": {
-        "type": "object",
-        "properties": {
-          "gameTableId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "size": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "gameSessions": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GameSession"
-            },
-            "nullable": true
-          },
-          "rpgSessions": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RpgSession"
-            },
-            "nullable": true
+            "$ref": "#/components/schemas/GameSessionDTO"
           }
         },
         "additionalProperties": false
@@ -1836,37 +1804,6 @@
         },
         "additionalProperties": false
       },
-      "GameVersion": {
-        "type": "object",
-        "properties": {
-          "gameVersionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "gameId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "game": {
-            "$ref": "#/components/schemas/Game"
-          },
-          "gameSessionGames": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GameSessionGame"
-            },
-            "nullable": true
-          },
-          "rpgSessionGames": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RpgSessionGame"
-            },
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
       "GameVersionDTO": {
         "type": "object",
         "properties": {
@@ -1879,53 +1816,7 @@
             "format": "int32"
           },
           "game": {
-            "$ref": "#/components/schemas/Game"
-          }
-        },
-        "additionalProperties": false
-      },
-      "Member": {
-        "type": "object",
-        "properties": {
-          "memberId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "email": {
-            "type": "string",
-            "nullable": true
-          },
-          "rpgCampaigns": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RpgCampaign"
-            },
-            "nullable": true
-          },
-          "gameSessions": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GameSession"
-            },
-            "nullable": true
-          },
-          "rpgCampaignRegistrations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RpgCampaignRegistration"
-            },
-            "nullable": true
-          },
-          "gameSessionRegistrations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GameSessionRegistration"
-            },
-            "nullable": true
+            "$ref": "#/components/schemas/GameDTO"
           }
         },
         "additionalProperties": false
@@ -1943,46 +1834,6 @@
           },
           "email": {
             "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "RpgCampaign": {
-        "type": "object",
-        "properties": {
-          "rpgCampaignId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "description": {
-            "type": "string",
-            "nullable": true
-          },
-          "organizerId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "organizer": {
-            "$ref": "#/components/schemas/Member"
-          },
-          "sessions": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RpgSession"
-            },
-            "nullable": true
-          },
-          "rpgCampaignRegistrations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RpgCampaignRegistration"
-            },
             "nullable": true
           }
         },
@@ -2009,31 +1860,7 @@
             "nullable": true
           },
           "organizer": {
-            "$ref": "#/components/schemas/Member"
-          }
-        },
-        "additionalProperties": false
-      },
-      "RpgCampaignRegistration": {
-        "type": "object",
-        "properties": {
-          "rpgCampaignRegistrationId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "memberId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "player": {
-            "$ref": "#/components/schemas/Member"
-          },
-          "rpgCampaignId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "rpgCampaign": {
-            "$ref": "#/components/schemas/RpgCampaign"
+            "$ref": "#/components/schemas/MemberDTO"
           }
         },
         "additionalProperties": false
@@ -2050,61 +1877,14 @@
             "format": "int32"
           },
           "player": {
-            "$ref": "#/components/schemas/Member"
+            "$ref": "#/components/schemas/MemberDTO"
           },
           "rpgCampaignId": {
             "type": "integer",
             "format": "int32"
           },
           "rpgCampaign": {
-            "$ref": "#/components/schemas/RpgCampaign"
-          }
-        },
-        "additionalProperties": false
-      },
-      "RpgSession": {
-        "type": "object",
-        "properties": {
-          "rpgSessionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "description": {
-            "type": "string",
-            "nullable": true
-          },
-          "schedule": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "status": {
-            "$ref": "#/components/schemas/SessionStatus"
-          },
-          "rpgCampaignId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "campaign": {
-            "$ref": "#/components/schemas/RpgCampaign"
-          },
-          "gameTableId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "table": {
-            "$ref": "#/components/schemas/GameTable"
-          },
-          "rpgSessionGames": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RpgSessionGame"
-            },
-            "nullable": true
+            "$ref": "#/components/schemas/RpgCampaignDTO"
           }
         },
         "additionalProperties": false
@@ -2136,7 +1916,7 @@
             "format": "int32"
           },
           "campaign": {
-            "$ref": "#/components/schemas/RpgCampaign"
+            "$ref": "#/components/schemas/RpgCampaignDTO"
           },
           "gameTableId": {
             "type": "integer",
@@ -2144,31 +1924,7 @@
             "nullable": true
           },
           "table": {
-            "$ref": "#/components/schemas/GameTable"
-          }
-        },
-        "additionalProperties": false
-      },
-      "RpgSessionGame": {
-        "type": "object",
-        "properties": {
-          "rpgSessionGameId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "rpgSessionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "rpgSession": {
-            "$ref": "#/components/schemas/RpgSession"
-          },
-          "gameVersionId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "gameVersion": {
-            "$ref": "#/components/schemas/GameVersion"
+            "$ref": "#/components/schemas/GameTableDTO"
           }
         },
         "additionalProperties": false
