# BGC_Portal/src/app/api/models/game-session-game.ts
@@ -1,11 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { GameSession } from './game-session';
-import { GameVersion } from './game-version';
-export interface GameSessionGame {
-  gameSession?: GameSession;
-  gameSessionGameId?: number;
-  gameSessionId?: number;
-  gameVersion?: GameVersion;
-  gameVersionId?: number;
-}
