# BGC_Portal/src/app/api/models/game.ts
@@ -1,11 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { GameVersion } from './game-version';
-export interface Game {
-  description?: null | string;
-  gameId?: number;
-  maxNumberPlayers?: null | number;
-  minNumberPlayers?: null | number;
-  name?: null | string;
-  versions?: null | Array<GameVersion>;
-}
