# BGC_Portal/src/app/api/models/rpg-campaign-registration.ts
@@ -1,11 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { Member } from './member';
-import { RpgCampaign } from './rpg-campaign';
-export interface RpgCampaignRegistration {
-  memberId?: number;
-  player?: Member;
-  rpgCampaign?: RpgCampaign;
-  rpgCampaignId?: number;
-  rpgCampaignRegistrationId?: number;
-}
